--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,25 @@
   <title>Staffory</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="src/assets/images/stafforyLogo.png.ico">
+
+  <!-- Template Main CSS File -->
+  <!-- Styles -->
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400&display=swap" rel="stylesheet">
+  <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/css/fontawesome-all.min.css" rel="stylesheet">
+  <link href="assets/css/swiper.css" rel="stylesheet">
+  <link href="assets/css/styles.css" rel="stylesheet">
+
+  <!-- Scripts -->
+  <script src="assets/js/bootstrap.min.js"></script> <!-- Bootstrap framework -->
+  <script src="assets/js/swiper.min.js"></script> <!-- Swiper for image and text sliders -->
+  <script src="assets/js/scripts.js"></script> <!-- Custom scripts -->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body>
+<body class="mat-typography">
   <app-root></app-root>
 </body>
 </html>
